# namespace-timeshift-browser-container

./: .dockerignore  .flake8  .gitignore  AGENTS.md  ANALYSIS-SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-SUMMARY.md  Dockerfile  PROXMOX-SETUP.md  RDM-EXPORT.md  README.md  SCANNER-FIX.md  container-rebuild.sh  debug-scanner.sh  deploy-proxmox.sh  discovered_idracs.json  emergency-fix.sh  fix-container.sh  idrac-dashboard.html  jnlp-interceptor.sh  launch-idrac.sh  launch-timeshift-browser.sh  pyproject.toml  requirements.txt  restart-fix.sh  test-multi-server.sh  viewer.jnlp
.claude/commands/: commit.md
.github/: copilot-instructions.md
.github/instructions/: dashboard-generator.md  docker-container.md  documentation.md  network-scanner.md  python-api.md
.github/workflows/: ci.yml
docker/: nginx.conf  start.sh  supervisord.conf
docs/: CHANGELOG.md  ProjectOverView.md  file-structure.md
scripts/: MacOS-faketime-browser.zsh  install-dependencies.sh  java-time-wrapper.sh  jnlp-time-interceptor.sh  time-shift-idrac.sh  time-shift-idrac.zsh
src/: claude-commit.sh  dashboard-generator.py  generate_easy_buttons.sh  idrac-api-server.py  idrac-container-api.py  init-data.py  launch-idrac.sh  launch-virtual-console.sh  network-scanner.py  sync_shell_aliases.sh
tests/: __init__.py  test_basic.py
