[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idrac-management-container"
version = "3.2.0"
description = "Containerized solution for managing Dell iDRAC servers through a web dashboard"
authors = [{name = "notdabob", email = "899503+notdabob@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "requests==2.31.0", 
    "paramiko==3.3.1",
    "python-nmap==0.7.1",
    "schedule==1.2.0",
    "gunicorn==21.2.0"
]

[project.optional-dependencies]
dev = [
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]